# spakky-fastapi

./: README.md  pyproject.toml
.github/workflows/: test.yml
spakky_fastapi/: error.py  jwt_auth.py  main.py  post_processor.py  routing.py
spakky_fastapi/aspects/: authenticate.py  jwt_auth.py
spakky_fastapi/extensions/: auth.py  authenticate.py
spakky_fastapi/middlewares/: error_handling.py  manage_context.py
spakky_fastapi/plugins/: authenticate.py  fast_api.py  jwt_auth.py
spakky_fastapi/post_processors/: add_builtin_middlewares.py  register_routes.py
spakky_fastapi/routes/: __init__.py  delete.py  get.py  head.py  options.py  patch.py  post.py  put.py  route.py  websocket.py
spakky_fastapi/stereotypes/: api_controller.py
tests/: conftest.py  test_routing.py
tests/apps/: dummy.py
tests/plugins/: test_fast_api.py  test_jwt_auth.py
